--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "ngrok": "ngrok http 5173",
+    "start-ngrok": "node start-ngrok.js"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.31.8",
+    "@clerk/nextjs": "^6.20.2",
     "@tailwindcss/vite": "^4.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
@@ -25,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "node": "^22.16.0",
     "vite": "^6.3.5"
   }
 }
