--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/clerk-react": "^5.31.8",
     "@clerk/nextjs": "^6.20.2",
     "@tailwindcss/vite": "^4.1.8",
+    "@types/react-scroll": "^1.8.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
